# NS3-development-latest--v3.36-

./: CMakeLists.txt
learning/: CMakeLists.txt  PROGRESS.md  two-node-ht.cc
learning-20260714/: PROGRESS.md
my-project/: CMakeLists.txt  README.md  dqn-agent.h  dqn_agent.py  ideal-throughput-manager.h  learning-rate-manager.cc  learning-rate-manager.h  mab-agent.cc  mab-agent.h  mab_agent.py  minstrel-agent.cc  minstrel-agent.h  ns3ai_rate_control.py  plot_scenario1.py  rate-adaptation-main.cc  rate-control-ai-interface.h  rate-control-ai-py.cc  rate-control-main.cc  wifi-environment.h
my-project-20260706/: CMakeLists.txt  dqn-agent.cc  dqn-agent.h  ideal-throughput-manager.cc  mab-agent.h  minstrel-agent.h  rate-adaptation-main.cc  wifi-environment.cc  wifi-environment.h  wifi-mcs-manager.cc  wifi-mcs-manager.h
reinrate/: CMakeLists.txt  explanation.md  ns3ai.py  plot_scenario1.py  rate-control.cc  reinrate_py.cc  rl-env.cc  rl-env.h  scenario1.cc  scenario1_ns3ai.py
reinrate/annotated_src/: CMakeLists.txt  learn.cc  ns3ai.py  rate-control.cc  rl-env.h
reproduction/: CMakeLists.txt  PROGRESS.md  Result_recor.md  minstrel_switch_report.py  offline_full_rbf_train.py  offline_local_switch_train.py  offline_reinforce_model.py  offline_reinforce_train.py  paper20_model.py  paper20_run.py  reinforce_model.py  reinforce_run.py  reinrate_py.cc  result_figure.py  reward_probe.py  rl-env.cc  rl-env.h  sanity_static_mcs7.py  two-node-ht.cc
reproduction/latest-version/: README.md  run_offline_auto.sh  训练启动.bat
reproduction/latest-version/plotting/: result_figure.py
reproduction/latest-version/project/: evaluate_ampdu_per_ampdu_5run.py  offline_reinforce_eval.py  offline_reinforce_train.py  verify_ampdu_final_failure.py
reproduction/latest-version/project/ns3_scenario/: rl-env.cc
reproduction/latest-version/project/references/: reproduction-mcs-reference-ampdu-off-1m-40s-summary.csv  reproduction-mcs-reference-ampdu-on-1m-40s-summary.csv
reproduction/latest-version/project/run_simulation/: auto_train_control.py  run_offline_auto.sh  训练启动.bat
reproduction/offline_before_per_sample/: README.md  offline_reinforce_eval.py  offline_reinforce_model.py  offline_reinforce_train.py
reproduction_round2/: CMakeLists.txt  README.md  model.py  random50-seeds.txt  rate-control.cc  rl-env.cc  run_baselines.py
success_reproduct/code/: rl-env.cc
success_reproduct/models/current_1000/: reproduction-scenario1-offline-full-rbf05dbadv-piq-entropy05-rewardmcs2over9-500-episode1000.pt  reproduction-scenario1-offline-full-rbf05dbadv-piq-entropy05-rewardmcs2over9-500-final.pt
success_reproduct/results/comparison_20run/: success-reproduct-current1000-20run-summary.csv
success_reproduct/场景1关闭聚合/: README.md
success_reproduct/场景1关闭聚合/archive/previous_600/: reproduction-scenario1-offline-full-rbf05dbadv-piq-entropy05-rewardshift-300-final.pt
success_reproduct/场景1关闭聚合/code/: evaluate_success_model_20run.py  offline_reinforce_train.py
success_reproduct/场景1关闭聚合/models/current_1000/: reproduction-scenario1-offline-full-rbf05dbadv-piq-entropy05-rewardmcs2over9-500-checkpoint.pt
success_reproduct/场景1关闭聚合/results/comparison_20run/: success-reproduct-current1000-20run-average.csv
success_reproduct/场景1关闭聚合（20包判定）/archive/previous_600/: reproduction-scenario1-offline-full-rbf05dbadv-piq-entropy05-rewardshift-300-checkpoint.pt
success_reproduct/场景1关闭聚合（20包判定）/code/: calibrate_mcs_references.py  offline_reinforce_eval.py  plot_training_episodes.py
success_reproduct/场景1开启聚合（逐AMPDU判定）/: README.md
success_reproduct/场景1开启聚合（逐AMPDU判定）/code/: calibrate_mcs_references.py  evaluate_reinforce_20run.py  offline_reinforce_train.py  plot_training_history.py  rl-env.cc  rl-env.h
success_reproduct/场景1开启聚合（逐AMPDU判定）/models/: reinforce-episode0750-best.pt  reinforce-episode0750-checkpoint.pt  reinforce-episode0750-final.pt
success_reproduct/场景1开启聚合（逐AMPDU判定）/results/comparison_20run/: reinforce-ampdu-perdecision-episode0750-20run-average.csv  reinforce-ampdu-perdecision-episode0750-20run-summary.csv
success_reproduct/场景1开启聚合（逐AMPDU判定）/results/comparison_20run/raw/: reinforce-ampdu-perdecision-episode0750-20run-ideal-run01-seed1334338375.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run02-seed633342003.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run03-seed765537396.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run04-seed1479091040.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run05-seed1383641045.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run06-seed175644312.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run07-seed1165171345.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run08-seed1990268500.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run09-seed117964676.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run10-seed917604911.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run11-seed147287560.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run12-seed339961899.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run13-seed808860806.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run14-seed1323048112.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run15-seed1097873750.csv  reinforce-ampdu-perdecision-episode0750-20run-ideal-run16-seed1601182252.csv  (+44 more)
success_reproduct/场景1开启聚合（逐AMPDU判定）/results/training/: reinforce-episode0750-training.csv
success_reproduct/场景2开启聚合/: README.md
success_reproduct/场景2开启聚合/code/: auto_train_control.py  evaluate_reinforce_5run.py  offline_full_rbf_train.py  offline_reinforce_model.py  offline_reinforce_train.py  two-node-ht.cc
success_reproduct/场景2开启聚合/models/: reinforce-episode1401-best.pt  reinforce-episode1401-checkpoint.pt  reinforce-episode1401-final.pt
success_reproduct/场景2开启聚合/results/comparison_5run/: scenario2-ampdu-on-per-ampdu-episode1401-summary.csv
success_reproduct/场景2开启聚合/results/training/: reinforce-episode1401-training.csv
备份文件/: my-project.rar
(+15 files in other folders)
